--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -85,7 +85,7 @@ $text-valid: #000;
 
 
 // box-shadows
-$box-light-top-sm: inset 2px 2px 3px rgba(225, 225, 225, 0.150),
+$box-light-top-sm: inset 2px 2px 3px rgba(225, 225, 225, .1),
                     inset -2px -2px 3px rgba(0, 0, 0, .150),
                     4px 4px 4px rgba(0, 0, 0, .150);
 
