hero animations and contact io

--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -306,7 +306,7 @@
                 // IO CLASS 
                 &.io-item {
                     .title {
-                        transform: translateY(100%);
+                        // transform: translateY(100%);
                         opacity: 1;
                         transition: 1.5s;
                         .icon {
