--- a/css/style.css
+++ b/css/style.css
@@ -1130,7 +1130,6 @@ hamburger
   font-size: clamp(.85rem, 1.25vw, 1.15rem);
   font-weight: 400;
   color: #bfbfbf;
-  animation: header 4s ease forwards 4s;
 }
 .welcome-section .hero #hero-content .hero-title .hero-title-header a {
   color: inherit;
@@ -1160,7 +1159,6 @@ hamburger
   font-size: clamp(2.5rem, 6vw, 3rem);
   font-size: clamp(2.5rem, 6vw, 3rem);
   color: #f4f4f4;
-  animation: name 8s ease forwards 4s;
 }
 @keyframes name {
   0%, 15% {
@@ -1192,7 +1190,6 @@ hamburger
   color: #bfbfbf;
   margin-top: 0.5rem;
   font-family: "Montserrat", sans-serif;
-  animation: meta 8s ease forwards 4s;
 }
 @keyframes meta {
   0%, 20% {
@@ -1219,7 +1216,6 @@ hamburger
   border-radius: 1rem;
   border: none;
   outline: none;
-  animation: show-cta 8s ease-in-out 4s;
   animation-fill-mode: forwards;
   transition: 0.3s linear;
   cursor: pointer;
@@ -1300,6 +1296,7 @@ hamburger
   font-weight: 500;
   animation: animate 3s ease-in-out infinite;
   animation-delay: calc(4s + .2s * var(--i));
+  animation-delay: calc(2s + .2s * var(--i));
   /* cta keyframes*/
   /* end of cta keyframes*/
 }
@@ -2538,7 +2535,6 @@ hamburger
   transition: 0.25s;
 }
 #contact .contact .contact-items .contact-item.io-item .title {
-  transform: translateY(100%);
   opacity: 1;
   transition: 1.5s;
 }
