--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -341,19 +341,19 @@
                                     transform: translateY(0);
 
                                     &:nth-child(1) {
-                                        transition-delay: 1s;
+                                        transition-delay: .65s;
                                     }
 
                                     &:nth-child(2) {
-                                        transition-delay: 1.1s;
+                                        transition-delay: .75s;
                                     }
 
                                     &:nth-child(3) {
-                                        transition-delay: 1.15s;
+                                        transition-delay: .85s;
                                     }
 
                                     &:nth-child(4) {
-                                        transition-delay: 1.2s;
+                                        transition-delay: .95s;
                                     }
 
                                     &:hover {
