--- a/css/style.css
+++ b/css/style.css
@@ -1826,8 +1826,8 @@ hamburger
   }
 }
 @media (min-width: 768px) {
-  #skills .skills .skills-intro {
-    width: 100%;
+  #skills .skills .skills-intro .skills-article {
+    width: 70%;
   }
 }
 #skills .skills .skills-intro .skills-article p {
@@ -1844,31 +1844,34 @@ hamburger
   color: inherit;
 }
 #skills .skills .skills-intro .skills-icons {
-  background-image: linear-gradient(0deg, #f4f4f4, #fafafa, #f4f4f4);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 0.5rem 0;
   margin: 0.25rem auto 1rem;
   margin: 0 auto 1rem;
   border-radius: 0.25rem;
 }
-@media (min-width: 820px) {
+@media (min-width: 768px) {
   #skills .skills .skills-intro .skills-icons {
-    justify-content: center;
-    gap: 10vw;
-    margin: 5vh auto;
     position: absolute;
-    top: 0;
+    flex-direction: column;
+    gap: 5vh;
+    top: -15vh;
     right: 5vw;
+  }
+}
+@media (min-width: 1024px) {
+  #skills .skills .skills-intro .skills-icons {
+    right: 20vw;
   }
 }
 #skills .skills .skills-intro .skills-icons svg {
   height: 5rem;
-  height: clamp(5rem, 10vw, 7rem);
   width: auto;
   fill: #20262e;
   transition: 0.25s;
+  filter: drop-shadow(0.25rem 0.25rem 0.25rem rgba(41, 50, 61, 0.2));
 }
 #skills .skills .skills-intro .skills-icons.io-item svg {
   transform: scale(0.8);
@@ -2869,6 +2872,7 @@ hamburger
 .work .work-container .item {
   overflow: hidden;
   padding: 0 0 1rem 0;
+  padding: 0;
 }
 .work .work-container .item:first-child {
   margin-bottom: 15vh;
@@ -2883,9 +2887,12 @@ hamburger
     padding: 0;
   }
 }
+.work .work-container .item .item-header {
+  padding: 1rem 0.5rem;
+}
 @media (min-width: 576px) {
   .work .work-container .item .item-header {
-    padding: 0.25rem;
+    padding: 1rem;
   }
 }
 @media (min-width: 768px) {
@@ -2899,12 +2906,11 @@ hamburger
 @media (min-width: 820px) {
   .work .work-container .item .item-header {
     width: 50%;
-    padding: 0 1rem;
   }
 }
 .work .work-container .item .item-header .item-title {
   text-transform: capitalize;
-  margin: 1rem 0;
+  margin-bottom: 1rem;
   font-weight: 600;
   font-size: 1.2rem;
   font-size: clamp(1.2rem, 2vw, 2rem);
@@ -2916,12 +2922,7 @@ hamburger
   gap: 1rem;
   list-style: none;
   text-transform: capitalize;
-  margin: 0 0 1rem 0;
-}
-@media (min-width: 768px) {
-  .work .work-container .item .item-header .item-meta-data {
-    margin: 0;
-  }
+  margin: 1.5rem 0 0;
 }
 .work .work-container .item .item-header .item-meta-data p {
   background: #20262e;
