--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -26,10 +26,10 @@
             @include sm {
                 padding: 0vh 5vw;
             }
-            @include md {
-                width: 100%;
-            }
             .skills-article {
+                @include md {
+                    width: 70%;
+                }
                 p {
                     // font-size: clamp(.95rem, 1.5vw, 1.15rem);
                     font-size: .95rem;
@@ -50,33 +50,40 @@
 
             .skills-icons {
                 // border: 1px solid $overlay-blue-dark;
-                background-image: linear-gradient(0deg, #f4f4f4, #fafafa, #f4f4f4);
+                // background-image: linear-gradient(0deg, #f4f4f4, #fafafa, #f4f4f4);
+                // background: #fafafa;
                 display: flex;
                 // display: none;
                 align-items: center;
-                justify-content: space-between;
+                justify-content: space-around;
                 padding: .5rem 0;
                 margin: .25rem auto 1rem;
                 margin: 0 auto 1rem;
                 border-radius: $border-radius-sm;
-                @include lg {
-                    justify-content: center;
-                    gap: 10vw;
-                    margin: 5vh auto;
+                @include md {
+                    // justify-content: center;
+                    // gap: 10vw;
+                    // margin: 5vh auto;
                     position: absolute;
-                    top: 0;
+                    flex-direction: column;
+                    gap: 5vh;
+                    top: -15vh;
                     right: 5vw;
+                }
+                @include xlg {
+                    right: 20vw;
                 }
 
                 svg {
                     // width: 100%;
                     // border: 1px solid red;
                     height: 5rem;
-                    height: clamp(5rem, 10vw, 7rem);
+                    // height: clamp(5rem, 8vw, 8rem);
                     width: auto;
                     fill: $overlay-blue-darker;
                     // stroke: green;
                     transition: .25s;
+                    filter: drop-shadow(.25rem .25rem .25rem hsla(212, 19%, 20%, .2));
                         // border-radius: $border-radius-sm;
                     @include md {
                         // height: 8rem;
