--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -33,6 +33,7 @@
             // height: auto;
             overflow: hidden;
             padding: 0 0 1rem 0;
+            padding: 0;
             &:first-child {
                 margin-bottom: 15vh;
             }
@@ -46,8 +47,9 @@
             .item-header {
                 // display: grid;
                 // border: 2px solid red;
+                padding: 1rem .5rem;
                 @include sm {
-                    padding: .25rem;
+                    padding: 1rem;
                 }
                 @include md {
                     display: grid;
@@ -58,7 +60,6 @@
                 @include lg {
                     // border: 2px solid pink;
                     width: 50%;
-                    padding: 0 1rem;
                 }
                 @include xlg {
                     // padding: 5vh 5vw 5vh 0;
@@ -66,7 +67,7 @@
                 }
                 .item-title {
                     text-transform: capitalize;
-                    margin: 1rem 0;
+                    margin-bottom: 1rem;
                     font-weight: 600;
                     font-size: 1.2rem;
                     font-size: clamp(1.2rem, 2vw, 2rem);
@@ -85,9 +86,9 @@
                     list-style: none;
                     // padding: 1rem 0;
                     text-transform: capitalize;
-                    margin:  0 0 1rem 0;
+                    margin: 1.5rem 0 0;
                     @include md {
-                        margin: 0;
+                        // margin: 0;
                     }
                     p {
                         background: $overlay-blue-darker;
@@ -228,7 +229,6 @@
             .item-content {
                 // border: 2px solid yellow;
                 width: 100%;
-                
                 @include lg {
                     // border: 2px solid yellow;
                     width: 50%;
