--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -95,7 +95,8 @@
                         color: $text-light;
                         padding: .25rem .5rem;
                         border-radius: .25rem;
-                        font-size: .85rem;
+                        font-size: .8rem;
+                        text-transform: lowercase;
                         &::first-letter {
                             text-transform: capitalize;
                         }
