--- a/css/style.css
+++ b/css/style.css
@@ -701,9 +701,9 @@ hamburger
     overflow-x: hidden;
   }
   .header .navbar #nav .nav-list .links-container ul li {
-    transform: translateX(10%);
+    transform: translateX(1.5rem);
     opacity: 0;
-    transition: 0.3s;
+    transition: 0.5s;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -2235,7 +2235,7 @@ hamburger
   width: 100%;
 }
 #skills .skills .io-container.io-item .skills-intro, #skills .skills .io-container.io-item .dropdown {
-  opacity: 0.7;
+  opacity: 0.6;
   transform: translateY(1rem);
   transition: 1s;
 }
