--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -202,9 +202,9 @@
                             // list items active transition
                             li {
                                 // border: 2px solid $border;
-                                transform: translateX(10%);
+                                transform: translateX(1.5rem);
                                 opacity: 0;
-                                transition: .3s;
+                                transition: .5s;
                                 display: flex;
                                 justify-content: flex-start;
                                 align-items: center;
