--- a/css/style.css
+++ b/css/style.css
@@ -2310,6 +2310,7 @@ hamburger
   }
 }
 #contact .contact .contact-items .contact-item {
+  border: 2px solid #20262e;
   width: 100%;
   display: flex;
   justify-content: flex-start;
@@ -2325,7 +2326,8 @@ hamburger
 }
 @media (min-width: 576px) {
   #contact .contact .contact-items .contact-item {
-    gap: 0.25rem;
+    gap: 1rem;
+    border-color: transparent;
   }
 }
 #contact .contact .contact-items .contact-item .title {
@@ -2337,6 +2339,13 @@ hamburger
   padding: 0.5rem;
   flex-basis: 35%;
   border-radius: 0.5rem;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+@media (min-width: 576px) {
+  #contact .contact .contact-items .contact-item .title {
+    border-radius: 0.5rem;
+  }
 }
 @media (min-width: 768px) {
   #contact .contact .contact-items .contact-item .title {
@@ -2358,29 +2367,6 @@ hamburger
   place-items: center;
   transition: 0.5s ease;
   position: relative;
-}
-#contact .contact .contact-items .contact-item .title .icon::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  outline: 1px solid #fff8;
-  border-radius: 50%;
-  animation: icon-pulse 2s infinite linear;
-}
-@keyframes icon-pulse {
-  0% {
-    outline-color: transparent;
-  }
-  50% {
-    outline-color: #fff8;
-  }
-  100% {
-    transform: scale(1.1);
-    outline-color: transparent;
-  }
 }
 #contact .contact .contact-items .contact-item .title .icon i {
   font-size: 1.5rem;
@@ -2416,7 +2402,7 @@ hamburger
   text-transform: capitalize;
   text-align: left;
   margin-bottom: 0.25rem;
-  font-size: clamp(1rem, 1.5vw, 1.225rem);
+  font-size: clamp(1.2rem, 1.5vw, 1.225rem);
 }
 #contact .contact .contact-items .contact-item .contact-info p {
   font-size: 1rem;
@@ -2536,45 +2522,6 @@ hamburger
   opacity: 1;
   transform: translateY(0);
   transition: 0.25s;
-}
-#contact .contact .contact-items .contact-item.io-item .title {
-  opacity: 1;
-  transition: 1.5s;
-}
-#contact .contact .contact-items .contact-item.io-item .contact-info h4 {
-  opacity: 0;
-  transform: translateX(1rem);
-  transition: 1s;
-}
-#contact .contact .contact-items .contact-item.io-item .contact-info p {
-  opacity: 0;
-  transform: translateX(1rem);
-  transition: 1s;
-}
-#contact .contact .contact-items .contact-item.io-item .contact-info a {
-  transform: translateY(10vh);
-  transition: 1s;
-  transition-timing-function: ease-in-out;
-}
-#contact .contact .contact-items .contact-item.active-item .title {
-  transform: translateY(0vh);
-  opacity: 1;
-}
-#contact .contact .contact-items .contact-item.active-item .title .icon {
-  transform: scale(1);
-}
-#contact .contact .contact-items .contact-item.active-item .contact-info h4 {
-  opacity: 1;
-  transform: translateX(0);
-  transition-delay: 0.25s;
-}
-#contact .contact .contact-items .contact-item.active-item .contact-info p, #contact .contact .contact-items .contact-item.active-item .contact-info a {
-  opacity: 1;
-  transform: translateX(0);
-  transition-delay: 0.5s;
-}
-#contact .contact .contact-items .contact-item.active-item .contact-info a {
-  transition-delay: 0.5s;
 }
 
 #projects {
@@ -2841,6 +2788,7 @@ hamburger
   min-height: 100vh;
   padding: 5vh 5vw;
   background: #fafafa;
+  background: #fff;
 }
 @media (min-width: 768px) {
   .work {
@@ -2888,7 +2836,7 @@ hamburger
   }
 }
 .work .work-container .item .item-header {
-  padding: 1rem 0.5rem;
+  padding: 1rem 0rem;
 }
 @media (min-width: 576px) {
   .work .work-container .item .item-header {
