box-light box shadow

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 .btn-bg::before {
   background: linear-gradient(0deg, #750b20, #dd134c);
   background: yellow;
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 .btn-bg::after {
   background: linear-gradient(0deg, #dc134c, #750b20);
@@ -200,11 +200,11 @@ hamburger
 }
 .top-link::before {
   background: linear-gradient(0deg, #750b20, #dd134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 .top-link::after {
   background: linear-gradient(0deg, #dc134c, #750b20);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
 .top-link i {
@@ -287,11 +287,11 @@ hamburger
   z-index: -1;
 }
 .btn::before {
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #000a, rgba(0, 0, 0, 0.3));
 }
 .btn::after {
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -1271,7 +1271,7 @@ hamburger
   outline: none;
 }
 .welcome-section .hero #cta-header::before {
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #750b20, #dd134c);
 }
 .welcome-section .hero #cta-header::after {
@@ -1283,7 +1283,7 @@ hamburger
   outline: none;
   border: none;
   background: linear-gradient(0deg, #dc134c, #750b20);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 .welcome-section .hero #cta-header span {
   position: relative;
@@ -1522,11 +1522,11 @@ hamburger
 }
 #menu .menu-section .menu-content .menu-cta .page-btn::before {
   background: linear-gradient(0deg, #750b20, #dd134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 #menu .menu-section .menu-content .menu-cta .page-btn::after {
   background: linear-gradient(0deg, #dc134c, #750b20);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -1966,12 +1966,12 @@ hamburger
 }
 #skills .skills .dropdown .dropbtn::before {
   background: linear-gradient(0deg, #750b20, #dd134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 #skills .skills .dropdown .dropbtn::after {
   background: linear-gradient(0deg, #dc134c, #750b20);
   opacity: 0;
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 #skills .skills .dropdown .dropbtn.active {
   transform: scale(0.98);
@@ -2113,7 +2113,7 @@ hamburger
   border-radius: 0.5rem;
   opacity: 0.8;
   z-index: -1;
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
   display: grid;
@@ -2460,7 +2460,7 @@ hamburger
 }
 #contact .contact .contact-items .contact-item .contact-info a::before {
   background: linear-gradient(0deg, #750b20, #dd134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 #contact .contact .contact-items .contact-item .contact-info a::after {
   background: linear-gradient(0deg, #dc134c, #750b20);
@@ -2961,11 +2961,11 @@ hamburger
 }
 .work .work-container .item .item-header .item-cta a.cta-primary::before {
   background: linear-gradient(0deg, #750b20, #dd134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 .work .work-container .item .item-header .item-cta a.cta-primary::after {
   background: linear-gradient(0deg, #dc134c, #750b20);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
 .work .work-container .item .item-header .item-cta a.cta-secondary {
@@ -3316,11 +3316,11 @@ hamburger
 }
 .work .work-items .work-item .view-site-btn::before {
   background: linear-gradient(0deg, #750b20, #dd134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 .work .work-items .work-item .view-site-btn::after {
   background: linear-gradient(0deg, #dc134c, #750b20);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
 .work .work-items .work-item .view-repo-btn {
@@ -3425,7 +3425,7 @@ hamburger
   position: absolute;
   opacity: 0;
   z-index: 20;
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 .about .col-right .about-title h2 {
   display: inline-block;
@@ -3465,7 +3465,7 @@ hamburger
 }
 .about .col-right button {
   background: linear-gradient(0deg, #750b20, #dd134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
   color: #fff;
   margin: 1rem auto;
   padding: 0.7rem;
@@ -3492,7 +3492,7 @@ hamburger
   width: 100%;
   height: 100%;
   opacity: 1;
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
   background: linear-gradient(0deg, #dc134c, #750b20);
   transition: 0.2s;
 }
@@ -3843,11 +3843,11 @@ hamburger
   z-index: -1;
 }
 #footer .footer .footer-top .socialMedia-links .socialMedia-item a::before {
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 #footer .footer .footer-top .socialMedia-links .socialMedia-item a::after {
   opacity: 0;
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 @media (max-width: 768px) {
   #footer .footer .footer-top .socialMedia-links .socialMedia-item a {
@@ -4232,7 +4232,7 @@ form button::before, form button::after {
 }
 form button::before {
   background: linear-gradient(0deg, #750b20, #dd134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 form button::after {
   background: linear-gradient(0deg, #dc134c, #750b20);
