--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -87,11 +87,11 @@ $text-valid: #000;
 // box-shadows
 $box-light-top-sm: inset 2px 2px 3px rgba(225, 225, 225, .1),
                     inset -2px -2px 3px rgba(0, 0, 0, .150),
-                    4px 4px 4px rgba(0, 0, 0, .150);
+                    .25rem .25rem .5rem rgba(0, 0, 0, .150);
 
 $box-light-top-sm-hover: inset 2px 2px 3px rgba(0, 0, 0, .250),
                     inset -2px -2px 3px rgba(225, 225, 225, 0.2),
-                    0px 4px 2px rgba(0, 0, 0, .250);
+                    .025rem .225rem .25rem rgba(0, 0, 0, .250);
 
 $box-light-top-bg: inset 4px 4px 5px rgba(221, 221, 221, 0.500),
                     inset -4px -4px 5px rgba(0, 0, 0, .200);
