--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -16,23 +16,24 @@
         width: 100%;
         height: 100%;
         background: $overlay-blue-darkest;
+        box-shadow: 0rem .5rem 1rem yellow;
         z-index: -1;
-        opacity: 0;
-        transition: .25s;
+        // opacity: 0;
+        transition: background .15s, box-shadow 1s;
     }
     // DESKTOP HEADER HEIGHT
     @media (min-width: 1024px) {
         height: 15vh;
         // border: 2px solid red;
-        overflow: hidden;
     }
     // INTERSECTION CLASS
     // HERO = IO
     // TRANSPARENT BACKGROUND AND NO LOGO IN DISPLAY
     &.hero-header {
         &::after {
-            // transform: translateY(-9vh);
-            opacity: 0;
+            background: transparent;
+            box-shadow: 0rem 1rem 1rem green;
+            box-shadow: 0rem 1rem 1rem transparent;
             // PSUEDO BG HEIGHT ON DESKTOP
             @include md {
                 // transform: translateY(-15vh);
@@ -49,12 +50,10 @@
     }
     // MAIN IO
     &.header-io {
-        // background-color: $overlay-blue-darker;
-        transition: background-color .25s;
-        transition: all .25s;
         &::after {
             opacity: 1;
-            // transform: translateY(0);
+            background: $overlay-blue-darkest;
+            box-shadow: 0rem .15rem 1rem rgba(0, 0, 0, .15);
         }
         @media (min-width: 1024px) {
             height: 8vh;
@@ -96,7 +95,9 @@
         }
         // DARK HEADER BACKGROUND WHEN SIDEBAR VISIBLE
         &.active-header {
-            background: $overlay-blue-dark;
+            &::after {
+                background: $overlay-blue-dark;
+            }
             #nav {
                 .logo {
                     transform: translateY(0);
