--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -183,7 +183,7 @@
                         z-index: 5;
 
                         ul {
-                            margin: .5rem 5vw;
+                            margin: 1rem 5vw 1rem;
                             background: $overlay-blue-dark;
                             padding: .5rem 0;
                             height: max-content;
