--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -16,7 +16,7 @@
         width: 100%;
         height: 100%;
         background: $overlay-blue-darkest;
-        box-shadow: 0rem .5rem 1rem yellow;
+        box-shadow: 0rem .5rem 1rem transparent;
         z-index: -1;
         // opacity: 0;
         transition: background .15s, box-shadow 1s;
