--- a/css/style.css
+++ b/css/style.css
@@ -574,7 +574,7 @@ hamburger
   width: 100%;
   height: 100%;
   background: #15191e;
-  box-shadow: 0rem 0.5rem 1rem yellow;
+  box-shadow: 0rem 0.5rem 1rem transparent;
   z-index: -1;
   transition: background 0.15s, box-shadow 1s;
 }
@@ -2788,8 +2788,8 @@ hamburger
 .work {
   min-height: 100vh;
   padding: 5vh 5vw;
-  background: #fafafa;
   background: #fff;
+  background: #fafafa;
 }
 @media (min-width: 768px) {
   .work {
@@ -2803,9 +2803,6 @@ hamburger
   .work .work-container {
     margin-top: 15vh;
   }
-}
-.work .work-container .item-flex-container {
-  background: #fff;
 }
 @media (min-width: 820px) {
   .work .work-container .item-flex-container {
